<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSocial</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    
    <string name="profile_pic">Default Profile Pic</string>
    <string name="default_name"></string>
    <string name="default_handle"></string>
    <string name="default_status">N: Some Social Network Status</string>
    <string name="default_location">2km away</string>
    <string name="default_timestamp">15 minutes ago</string>
    <string name="default_map">Default Map</string>
    <string name="link_your_account">Link your account</string>
    <string name="share_my_location">Share my Location?</string>
    
    <string name="post_facebook">Facebook</string>
    <string name="post_twitter">Twitter</string>
    <string name="post_status_prompt">Post a Status</string>
    <string name="post_tweet_prompt">Post a Tweet</string>
    <string name="go">Go</string>
    
    <integer name="google_play_services_version">4452000</integer>
    <string name="gps_config">GPS Config</string>
   
    <string name="login_with_twitter">Log in with Twitter</string>   

    <!-- For Facebook Login -->
    <string name="app_id">286694874836209</string>

</resources>
