<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp" >

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/author"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/default_name"
	        android:textSize="12sp" />
	
	    <ImageView
	        android:id="@+id/profile_picture"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="5dp"
	        android:contentDescription="@string/profile_pic"
	        android:gravity="left" />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/message"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:gravity="left"
	        android:text="@string/default_status"
	        android:textSize="18sp" />

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="right">
		    <TextView
		        android:id="@+id/distance"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:layout_marginRight="10dp"
		        android:text="@string/default_location"
		        android:textSize="12sp" />
		
		    <TextView
		        android:id="@+id/createdAt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"
		        android:text="@string/default_timestamp"
		        android:textSize="12sp" />
	    </LinearLayout>
    </LinearLayout>

</LinearLayout>