<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" >

        <ImageView
            android:id="@+id/avatar_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/default_avatar" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/avatar_pic"
            android:text="@string/default_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/avatar_pic"
            android:text="@string/default_handle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/handle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/avatar_pic"
            android:text="@string/link_your_account"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/link_twitter"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_below="@id/link_account"
            android:layout_alignParentRight="true"
            android:layout_marginRight="85dp"
            android:background="@drawable/link_twitter_selector" />
    </RelativeLayout>

    <ListView
        android:id="@+id/feed_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>
</LinearLayout>
